# agentic-factory-hack

./: aspire.config.json  factory-hack.slnx  requirements.txt
.devcontainer/: Dockerfile  devcontainer-lock.json  setup-dotnet.sh
challenge-0/: get-keys.sh
challenge-0/infra/: azuredeploy.json
challenge-1/agents/: anomaly_classification_agent.py  anomaly_classification_agent_mcp.py  fault_diagnosis_agent.py
challenge-2/RepairPlanner/: Program.cs  RepairPlannerAgent.cs
challenge-2/RepairPlanner/Models/: DiagnosedFault.cs  Part.cs  RepairTask.cs  Technician.cs  WorkOrder.cs  WorkOrderPartUsage.cs
challenge-2/RepairPlanner/Services/: CosmosDbOptions.cs  CosmosDbService.cs  FaultMappingService.cs
challenge-2/RepairPlanner/sample-data/: diagnosed-fault.json
challenge-3/agents/: maintenance_scheduler_agent.py  parts_ordering_agent.py
challenge-4/agent-workflow/: apphost.cs  aspire.config.json
challenge-4/agent-workflow/app/: agents.py  main.py  pyproject.toml
challenge-4/agent-workflow/dotnetworkflow/: AgentProviders.cs  FactoryWorkflow.csproj  Program.cs  TextOnlyAgentExecutor.cs
challenge-4/agent-workflow/dotnetworkflow/RepairPlanner/: RepairPlannerAgentFactory.cs
