[project]
name = "FastAPI-starter"
version = "0.1.0"
description = "FastAPI starter"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "agent-framework-core>=1.2.2",
    "agent-framework-foundry>=1.2.2",
    "a2a-sdk[http-server]>=1.0.2",
    "azure-identity>=1.25.3",
    "azure-cosmos>=4.5.0",
    "python-dotenv>=1.0.0",
    "azure-monitor-opentelemetry>=1.8.7",
    "opentelemetry-api>=1.40",
    "opentelemetry-sdk>=1.40",
    "opentelemetry-exporter-otlp-proto-grpc>=1.40",
    "opentelemetry-semantic-conventions-ai>=0.5",
    "aiohttp>=3.11.13"
]

[tool.uv]
prerelease = "allow"
